--- a/forms Style.css
+++ b/forms Style.css
@@ -123,6 +123,23 @@ button:hover {
     margin-top: 30px;
 }
 
+
+#resultSEM2 {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    color: #33cccc;
+    margin-top: 30px;
+}
+
+#totalGPA {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    color: #33cccc;
+    margin-top: 30px;
+}
+
 /* Media query for smaller screens */
 @media screen and (max-width: 600px) {
     form {
